--- a/Layouts/Level_023.xml
+++ b/Layouts/Level_023.xml
@@ -126,7 +126,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="personagen4" uid="1069">
+                <instance type="Sprite_MainCharacter_004" uid="1069">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -179,7 +179,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="personagen5" uid="1070">
+                <instance type="Sprite_MainCharacter_005" uid="1070">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -345,7 +345,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="raio1" uid="1127">
+                <instance type="Sprite_Trigger_LightningStart_002" uid="1127">
                     <properties>
                         <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -367,7 +367,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="raio2" uid="1128">
+                <instance type="Sprite_Trigger_LightningStart_003" uid="1128">
                     <properties>
                         <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -455,7 +455,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="raio1" uid="49">
+                <instance type="Sprite_Trigger_LightningStart_002" uid="49">
                     <properties>
                         <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
