--- a/Layouts/Level_020.xml
+++ b/Layouts/Level_020.xml
@@ -572,8 +572,8 @@
                 </instance>
                 <instance type="Sprite_Text_Wife_Breakdown" uid="462">
                     <properties>
-                        <initial-visibility>Invisible</initial-visibility>
-                        <initial-animation>nada</initial-animation>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Sprite_Text_Wife_Breakdown_Ani_Idle_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
@@ -583,11 +583,11 @@
                         <x>563.898498535</x>
                         <y>541.576721191</y>
                         <z>0</z>
-                        <width>161</width>
-                        <height>18</height>
+                        <width>250</width>
+                        <height>250</height>
                         <depth>0</depth>
-                        <hotspotX>0.503105581</hotspotX>
-                        <hotspotY>0</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
