--- a/Layouts/Level_010.xml
+++ b/Layouts/Level_010.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_010</name>
     <sid>3139948614195474</sid>
-    <event-sheet>EventSheet_007</event-sheet>
+    <event-sheet>EventSheet_OldComputerScript</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
