--- a/Layouts/Level_017.xml
+++ b/Layouts/Level_017.xml
@@ -4,7 +4,7 @@
     <sid>6359154842657666</sid>
     <event-sheet>EventSheet_011</event-sheet>
     <size>
-        <width>1280</width>
+        <width>1135</width>
         <height>720</height>
     </size>
     <margins>
@@ -39,7 +39,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>642.720458984</x>
+                        <x>565.724121094</x>
                         <y>359.907348633</y>
                         <z>0</z>
                         <width>1138.940429688</width>
@@ -68,7 +68,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>227.461212158</x>
+                        <x>150.464889526</x>
                         <y>729.82409668</y>
                         <z>0</z>
                         <width>1676</width>
@@ -83,21 +83,21 @@
                 <instance type="Sprite_PlayerCarParking" uid="294">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>vazio</initial-animation>
+                        <initial-animation>Sprite_PlayerCarParking_Ani_CarEmpty_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>702.147094727</x>
+                        <x>625.150756836</x>
                         <y>699.63079834</y>
                         <z>0</z>
-                        <width>46.284526825</width>
-                        <height>24.021080017</height>
+                        <width>23.435203552</width>
+                        <height>19.334039688</height>
                         <depth>0</depth>
-                        <hotspotX>0.755274236</hotspotX>
-                        <hotspotY>0.504065037</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.50505048</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -119,7 +119,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-40</x>
+                        <x>-116.996337891</x>
                         <y>328</y>
                         <z>0</z>
                         <width>1675.547607422</width>
@@ -182,7 +182,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>220</x>
+                        <x>143.003677368</x>
                         <y>160</y>
                         <z>0</z>
                         <width>590</width>
@@ -245,7 +245,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>682</x>
+                        <x>605.003662109</x>
                         <y>390</y>
                         <z>0</z>
                         <width>512</width>
@@ -308,7 +308,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>237</x>
+                        <x>160.003677368</x>
                         <y>453.317260742</y>
                         <z>0</z>
                         <width>590</width>
@@ -371,7 +371,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>627</x>
+                        <x>550.003662109</x>
                         <y>227</y>
                         <z>0</z>
                         <width>493</width>
@@ -434,7 +434,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>230</x>
+                        <x>153.003677368</x>
                         <y>380</y>
                         <z>0</z>
                         <width>172</width>
@@ -497,7 +497,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>840</x>
+                        <x>763.003662109</x>
                         <y>507</y>
                         <z>0</z>
                         <width>301</width>
@@ -560,7 +560,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>443</x>
+                        <x>366.003662109</x>
                         <y>567</y>
                         <z>0</z>
                         <width>212</width>
@@ -623,7 +623,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>6</x>
+                        <x>-70.996322632</x>
                         <y>437</y>
                         <z>0</z>
                         <width>465</width>
@@ -686,7 +686,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>146.448272705</x>
+                        <x>69.451950073</x>
                         <y>398.5</y>
                         <z>0</z>
                         <width>256</width>
@@ -696,28 +696,6 @@
                         <hotspotY>0.503448248</hotspotY>
                         <angle>-1.570796371</angle>
                         <opacity>0.300000012</opacity>
-                    </world>
-                </instance>
-                <instance type="Sprite_MegaCorpBuilding" uid="310">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>1129.359130859</x>
-                        <y>168.213317871</y>
-                        <z>0</z>
-                        <width>360.468841553</width>
-                        <height>1081.591430664</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5002563</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
                     </world>
                 </instance>
                 <instance type="Sprite_MegaCorpDoors" uid="311">
@@ -730,7 +708,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1162.232421875</x>
+                        <x>1085.236083984</x>
                         <y>680.071289063</y>
                         <z>0</z>
                         <width>148.846908569</width>
@@ -785,7 +763,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1120</x>
+                        <x>1043.003662109</x>
                         <y>707</y>
                         <z>0</z>
                         <width>10.263195992</width>
@@ -814,7 +792,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>729.250061035</x>
+                        <x>652.253723145</x>
                         <y>730.580505371</y>
                         <z>0</z>
                         <width>1399.588378906</width>
@@ -843,7 +821,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>57</x>
+                        <x>-19.996322632</x>
                         <y>498</y>
                         <z>0</z>
                         <width>1003</width>
@@ -865,7 +843,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>702.241760254</x>
+                        <x>625.245422363</x>
                         <y>704.324829102</y>
                         <z>0</z>
                         <width>28.248840332</width>
@@ -894,7 +872,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>1173</x>
+                        <x>1096.003662109</x>
                         <y>507</y>
                         <z>0</z>
                         <width>1675.547607422</width>
@@ -909,7 +887,7 @@
                 <instance type="Sprite_PlayerCar_004" uid="295">
                     <properties>
                         <initial-visibility>Invisible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
+                        <initial-animation>Sprite_PlayerCar_004_Ani_Idle_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
@@ -932,7 +910,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>721.971679688</x>
+                        <x>644.975341797</x>
                         <y>700.724182129</y>
                         <z>0</z>
                         <width>52.672805786</width>
@@ -961,7 +939,7 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>799</x>
+                        <x>722.003662109</x>
                         <y>671</y>
                         <z>0</z>
                         <width>156.763183594</width>
@@ -983,11 +961,11 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>-123</x>
-                        <y>618</y>
+                        <x>-176.442749023</x>
+                        <y>643.206604004</y>
                         <z>0</z>
-                        <width>250</width>
-                        <height>250</height>
+                        <width>297.107177734</width>
+                        <height>199.586791992</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -1027,7 +1005,7 @@
                     <blend-mode>1</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>643.26385498</x>
+                        <x>566.26751709</x>
                         <y>360.42010498</y>
                         <z>0</z>
                         <width>1138.939941406</width>
