fix: bugs on Level_024 and Level_025 are now fixed
All bugs in Level_024 and Level_025 caused by the new naming convention have been properly reviewed and fixed.
The Levels are now working as expected.

--- a/Layouts/Credits.xml
+++ b/Layouts/Credits.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Credits</name>
     <sid>7172527695783292</sid>
-    <event-sheet>EventSheet_017</event-sheet>
+    <event-sheet>EventSheet_Credits</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
