--- a/Layouts/Level_024.xml
+++ b/Layouts/Level_024.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_024</name>
     <sid>6982574512058221</sid>
-    <event-sheet>EventSheet_016</event-sheet>
+    <event-sheet>EventSheet_015</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
@@ -249,7 +249,7 @@
                 <instance type="Sprite_Gun_002" uid="1130">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>nada</initial-animation>
+                        <initial-animation>Sprite_Gun_002_Ani_Idle_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
@@ -259,8 +259,8 @@
                         <x>640</x>
                         <y>360</y>
                         <z>0</z>
-                        <width>1280</width>
-                        <height>720</height>
+                        <width>250</width>
+                        <height>250</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -271,7 +271,7 @@
                 <instance type="Sprite_Gun_003" uid="1131">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>nada</initial-animation>
+                        <initial-animation>Sprite_Gun_003_Ani_Idle_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
@@ -290,8 +290,8 @@
                         <x>640</x>
                         <y>360</y>
                         <z>0</z>
-                        <width>1280</width>
-                        <height>720</height>
+                        <width>250</width>
+                        <height>250</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
@@ -368,7 +368,7 @@
                 <instance type="Sprite_Lightning_001" uid="1133">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>nada</initial-animation>
+                        <initial-animation>Sprite_Gun_002_Ani_Idle_001</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
@@ -421,28 +421,6 @@
                     <world>
                         <x>910</x>
                         <y>353</y>
-                        <z>0</z>
-                        <width>156</width>
-                        <height>250</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="Sprite_Trigger_ShowEndText_001" uid="1136">
-                    <properties>
-                        <initial-visibility>Invisible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>511.25201416</x>
-                        <y>409.625244141</y>
                         <z>0</z>
                         <width>156</width>
                         <height>250</height>
@@ -541,8 +519,8 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>644</x>
-                        <y>410</y>
+                        <x>-511</x>
+                        <y>1265</y>
                         <z>0</z>
                         <width>1562</width>
                         <height>1029</height>
@@ -553,46 +531,49 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite_Trigger_ShowEndText_003" uid="198">
+                <instance type="Sprite_MainCharacter_002" uid="77">
                     <properties>
-                        <initial-visibility>Invisible</initial-visibility>
+                        <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Platform">
+                            <properties>
+                                <max-speed>60</max-speed>
+                                <acceleration>100</acceleration>
+                                <deceleration>150</deceleration>
+                                <jump-strength>0</jump-strength>
+                                <gravity>1500</gravity>
+                                <max-fall-speed>1000</max-fall-speed>
+                                <double-jump>Disabled</double-jump>
+                                <jump-sustain>0</jump-sustain>
+                                <default-controls>Yes</default-controls>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
+                    <effect-instances>
+                        <effect-instance type="AdjustHSL">
+                            <parameters>
+                                <hue>0</hue>
+                                <luminosity>1</luminosity>
+                                <saturation>1</saturation>
+                            </parameters>
+                        </effect-instance>
+                    </effect-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>197</x>
-                        <y>412</y>
+                        <x>17.804000854</x>
+                        <y>359.770996094</y>
                         <z>0</z>
-                        <width>98</width>
-                        <height>250</height>
+                        <width>22.05667305</width>
+                        <height>91.128883362</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="Sprite_Trigger_ShowEndText_004" uid="199">
-                    <properties>
-                        <initial-visibility>Invisible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>956</x>
-                        <y>300</y>
-                        <z>0</z>
-                        <width>250</width>
-                        <height>250</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
+                        <hotspotY>1</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
